name:                cornea
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ambuc/cornea#readme
license:             BSD3
license-file:        LICENSE
author:              James Adam Buckland
maintainer:          james.adam.buckland@gmail.com
copyright:           2017 James Adam Buckland
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cornea
  build-depends:       base >= 4.7 && < 5
                     , JuicyPixels >= 3.2.8.3
                     , matrix >= 0.3.5.0
                     , Rasterific >= 0.7.2.1
  default-language:    Haskell2010

executable cornea-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cornea
                     , JuicyPixels >= 3.2.8.3
  default-language:    Haskell2010

test-suite cornea-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cornea
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ambuc/cornea
